Release/v4.7.2 202506296 (#134)
* Revert "Updated the APIManager"

This reverts commit 4e252ac29cfb6c3ab26ae5ea4a8f6de154311f2e.

# Conflicts:
#	app/src/main/java/com/brainwallet/tools/manager/APIManager.kt

* Reverted the Kotlin APIManager.

* Add version and code to welcome screen

* reset padding

* Revert "Updated the APIManager"

This reverts commit 4e252ac29cfb6c3ab26ae5ea4a8f6de154311f2e.

# Conflicts:
#	app/src/main/java/com/brainwallet/tools/manager/APIManager.kt

* Reverted the Kotlin APIManager.

* fix: fix crash when FragmentSignal dismissed

* fix: fix sync after wipe

* fix: fix wrong lifecycle to trigger callback at FragmentSignal

* Update issue templates

* updated core changes

per @andhikayuana

* Rename .java to .kt

* chore: refactor BRApiManager & APIClient

* chore: remove unused part at APIClient

* feat: wip new peer discovery

* feat: implement selected peer ip address from cache (fetched from API)

* feat: implement selected peer ip address from cache (fetched from API)

* feat: filter out peers with NODE_NETWORK, NODE_BLOOM

* fix: race condition when clear shared prefs values after wipeAll

* Updating the core library

from the new peer discovery (v4.2.0)

* Chore/revert pre peer discovery (Android) (#69)

* chore: update core submodule

* chore: resolve conflict

* Update build.gradle.kts

version and code bump

* chore: for now at BRPeerManager.wrapConnectV2 only using connect, since the core using hardcoded peers

* fix: fix write down confirm screen (#63)

* fix: fix write down confirm screen

* fix: fix allow seed word item not unique

* chore: cherry picked and adjust from
- f2fa8e1e4fb9c7429fa86461b24b4463a7969ecf
- 98644c425b2fdae7b8b424708fb1a61ad983a9d8
- 93969278da8f95adc0c9f0f8411c8a27876a4d77
- 7ad4b9853b7d1bf7ddbaa576242d8800615a48fb
- 8e57d2a67420565b40b753dec5a533776da4821f

* fix: fix crash can't parse response inside LtcRepository.fetchRates

* fix: fix crash (failed parse) when SelectedPeersRepository.fetchSelectedPeer